erDiagram
    customers ||--o{ orders : "realiza (customer_id)"
    customers ||--o{ addresses : "possui (customer_id)"
    customers ||--o{ returns : "solicita (customer_id)"
    
    employees ||--o{ orders : "atende (salesperson_id)"
    employees ||--o{ goods_receipts : "recebe (received_by_employee_id)"
    employees ||--o{ purchase_orders : "compra (buyer_id)"
    
    locations ||--o{ orders : "expede (location_id)"
    locations ||--o{ stock_levels : "armazena (location_id)"
    locations ||--o{ stock_movements : "movimenta (location_id)"
    
    brands ||--o{ products : "fabrica (brand_id)"
    categories ||--o{ products : "classifica (category_id)"
    products ||--o{ product_variants : "variante de (product_id)"
    
    product_variants ||--o{ order_items : "item de pedido (product_variant_id)"
    product_variants ||--o{ purchase_order_items : "item de OC (product_variant_id)"
    product_variants ||--o{ stock_levels : "nível de estoque (product_variant_id)"
    product_variants ||--o{ stock_movements : "movimentação (product_variant_id)"
    product_variants ||--o{ variant_attribute_values : "atributo (product_variant_id)"
    
    orders ||--o{ order_items : "contém (order_id)"
    orders ||--o{ payments : "pago com (order_id)"
    orders ||--o{ fiscal_invoices : "gera NFe (order_id)"
    orders ||--o{ returns : "devolução de (order_id)"
    
    order_items ||--o{ return_items : "item devolvido (order_item_id)"
    returns ||--o{ return_items : "composto por (return_id)"
    
    suppliers ||--o{ purchase_orders : "fornece (supplier_id)"
    suppliers ||--o{ product_suppliers : "cotado por (supplier_id)"
    purchase_orders ||--o{ purchase_order_items : "itens de OC (purchase_order_id)"
    purchase_orders ||--o{ goods_receipts : "recebimento (purchase_order_id)"
